<resources>
    <string name="app_name">MapleCal</string>
    <string name="home">Home</string>
    <string name="symbol">심볼</string>
    <string name="park">몬스터파크</string>
    <string name="hyper">하이퍼스텟</string>
    <string name="train">심신수련관</string>
    <string name="growth">성장의비약</string>
    <string name="maplecal">메이플 계산기</string>
    <string name="calculate">계산하기</string>
    <string name="nickname">닉네임</string>
    <string name="search">검색</string>
    <string name="level_count">레벨/개수</string>
    <string name="mini_game">미니게임</string>
    <string name="gain">20xx년 xx월 xx일</string>
    <string name="meso">xxxxxxxxxx</string>
    <string name="gain_day">획득 날짜</string>
    <string name="request_meso">요구 메소</string>
    <string name="previous">이전</string>
    <string name="result">계산 결과</string>
    <string name="clear">클리어 횟수</string>
    <string name="point">메포사용 횟수</string>
    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>
    <string name="sun">일</string>
    <string name="request_point">요구 메포</string>
    <string name="decoration">훈장</string>
    <string name="level">레벨</string>
    <string name="remain_point">남은 포인트</string>
    <string name="initialization">초기화</string>
    <string name="exp_per">경험치 퍼센트 (%)</string>
    <string name="time">시간</string>
    <string name="extreme">익성비</string>
    <string name="growth1">비약1 200~209</string>
    <string name="growth2">비약2 200~219</string>
    <string name="growth3">비약3 200~229</string>
    <string name="typhoon">태성비 200~239</string>
    <string name="limit">극성비 200~249</string>
    <string name="zero">0</string>
    <string name="_200">200</string>
    <string name="_0_0">0.0</string>
    <string name="loading">Loading...</string>
</resources>