<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/symbol_item"
        android:enabled="true"
        android:icon="@drawable/symbol"
        android:title="@string/symbol"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/park_item"
        android:enabled="true"
        android:icon="@drawable/park"
        android:title="@string/park"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/hyper_item"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/hyper"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/growth_item"
        android:enabled="true"
        android:icon="@drawable/growth"
        android:title="@string/growth"
        app:showAsAction="ifRoom" />
</menu>