<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.park.ParkFragment">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <GridLayout
                android:id="@+id/gridLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white"
                android:columnCount="3"
                app:layout_constraintBottom_toTopOf="@id/recyclerView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <CheckBox
                    android:id="@+id/park_sun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:drawableStart="@drawable/sunday"
                    android:text="@string/sun" />

                <CheckBox
                    android:id="@+id/park_mon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:drawableStart="@drawable/monday"
                    android:text="@string/mon" />

                <CheckBox
                    android:id="@+id/park_tue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:drawableStart="@drawable/tuesday"
                    android:text="@string/tue" />

                <CheckBox
                    android:id="@+id/park_wed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:drawableStart="@drawable/wednesday"
                    android:text="@string/wed" />

                <CheckBox
                    android:id="@+id/park_thu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:drawableStart="@drawable/thursday"
                    android:text="@string/thu" />

                <CheckBox
                    android:id="@+id/park_fri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:drawableStart="@drawable/friday"
                    android:text="@string/fri" />

                <CheckBox
                    android:id="@+id/park_sat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:drawableStart="@drawable/saturday"
                    android:text="@string/sat" />

            </GridLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:background="@color/white"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/cal_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gridLayout" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cal_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@color/skyblue"
                android:text="@string/calculate"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>