<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/symbol_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@id/symbol_gain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/symbol" />

    <TextView
        android:id="@+id/symbol_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/symbol"
        app:layout_constraintDimensionRatio="h, 4:1"
        app:layout_constraintEnd_toStartOf="@+id/symbol_gain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/symbol_image" />

    <TextView
        android:id="@+id/symbol_gain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/gain"
        app:layout_constraintDimensionRatio="h, 4:1"
        app:layout_constraintEnd_toStartOf="@id/request_meso"
        app:layout_constraintStart_toEndOf="@+id/symbol_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/request_meso"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/meso"
        app:layout_constraintDimensionRatio="h, 4:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/symbol_gain"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>