<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.growth.GrowthFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.maplecal.presentation.growth.GrowthViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/nickname"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/nickname"
                android:text="@={viewModel.nicknameLiveData}"
                app:layout_constraintEnd_toStartOf="@id/search_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/skyblue"
                android:text="@string/search"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/nickname"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/level"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/level_edit"
                app:layout_constraintTop_toBottomOf="@id/nickname" />

            <TextView
                android:id="@+id/exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/exp_per"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/exp_edit"
                app:layout_constraintTop_toBottomOf="@id/nickname" />

            <EditText
                android:id="@+id/level_edit"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/_200"
                android:text="@={viewModel.levelLiveData}"
                android:inputType="number"
                app:layout_constraintEnd_toStartOf="@id/exp_edit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/level" />

            <EditText
                android:id="@+id/exp_edit"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/_0_0"
                android:text="@={viewModel.expLiveData}"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/level_edit"
                app:layout_constraintTop_toBottomOf="@id/exp" />

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="20dp"
                android:background="@color/white"
                app:layout_constraintBottom_toTopOf="@id/result_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/exp_edit">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp">

                    <TextView
                        android:id="@+id/extreme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/extreme"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toTopOf="@id/extreme_edit"
                        app:layout_constraintStart_toStartOf="@id/extreme_edit"
                        app:layout_constraintTop_toBottomOf="parent" />

                    <EditText
                        android:id="@+id/extreme_edit"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.extremeLiveData}"
                        android:inputType="number"
                        app:layout_constraintBottom_toTopOf="@id/growth2"
                        app:layout_constraintEnd_toStartOf="@id/growth1_edit"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/extreme" />

                    <TextView
                        android:id="@+id/growth1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/growth1"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toTopOf="@id/growth1_edit"
                        app:layout_constraintStart_toStartOf="@id/growth1_edit"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/growth1_edit"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.growth1LiveData}"
                        android:inputType="number"
                        app:layout_constraintBottom_toTopOf="@id/growth3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/extreme_edit"
                        app:layout_constraintTop_toBottomOf="@id/growth1" />

                    <TextView
                        android:id="@+id/growth2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/growth2"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toTopOf="@id/growth2_edit"
                        app:layout_constraintStart_toStartOf="@id/growth2_edit"
                        app:layout_constraintTop_toBottomOf="@id/extreme_edit" />

                    <EditText
                        android:id="@+id/growth2_edit"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.growth2LiveData}"
                        android:inputType="number"
                        app:layout_constraintBottom_toTopOf="@id/typhoon"
                        app:layout_constraintEnd_toStartOf="@id/growth3_edit"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/growth2" />

                    <TextView
                        android:id="@+id/growth3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/growth3"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toTopOf="@id/growth3_edit"
                        app:layout_constraintStart_toStartOf="@id/growth3_edit"
                        app:layout_constraintTop_toBottomOf="@id/growth1_edit" />

                    <EditText
                        android:id="@+id/growth3_edit"
                        android:layout_width="140sp"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.growth3LiveData}"
                        android:inputType="number"
                        app:layout_constraintBottom_toTopOf="@id/limit"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/growth2_edit"
                        app:layout_constraintTop_toBottomOf="@id/growth3" />

                    <TextView
                        android:id="@+id/typhoon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/typhoon"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toTopOf="@id/typhoon_edit"
                        app:layout_constraintStart_toStartOf="@id/typhoon_edit"
                        app:layout_constraintTop_toBottomOf="@id/growth2_edit" />

                    <EditText
                        android:id="@+id/typhoon_edit"
                        android:layout_width="140sp"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.typhoonLiveData}"
                        android:inputType="number"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/limit_edit"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/typhoon" />

                    <TextView
                        android:id="@+id/limit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/limit"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toTopOf="@id/limit_edit"
                        app:layout_constraintStart_toStartOf="@id/limit_edit"
                        app:layout_constraintTop_toBottomOf="@id/growth3_edit" />

                    <EditText
                        android:id="@+id/limit_edit"
                        android:layout_width="140sp"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.limitLiveData}"
                        android:inputType="number"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/typhoon_edit"
                        app:layout_constraintTop_toBottomOf="@id/limit" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>

            <TextView
                android:id="@+id/result_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@id/cal_button"
                app:layout_constraintEnd_toStartOf="@id/result_edit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/result_edit" />

            <EditText
                android:id="@+id/result_edit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@={viewModel.resultLiveData}"
                android:enabled="false"
                app:layout_constraintBottom_toTopOf="@id/cal_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/result_text"
                app:layout_constraintTop_toBottomOf="@id/scrollView" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cal_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@color/skyblue"
                android:text="@string/calculate"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>